# MTRN4231

./: README.md  rectangle_detection_v4.py  setupRealur5e.sh  show_cam.py
src/: camera_check.py  mask_tuner.py  rectangle_detection_v5.py
src/arduino_comm/: package.xml  setup.py
src/arduino_comm/arduino_comm/: arduino_client.py  arduino_node.py
src/brain/: package.xml  setup.py
src/brain/brain/: brain.py  moveit_pub.py
src/brain/launch/: brain_launch.py  project_launch.py  system_launch.py
src/end_effector/end_effector_description/: CMakeLists.txt  package.xml
src/end_effector/end_effector_description/launch/: display.launch.py
src/end_effector/end_effector_description/urdf/: end_effector.urdf
src/key_pos_msgs/: CMakeLists.txt  package.xml
src/key_pos_msgs/msg/: KeyPosition.msg  KeyPositionArray.msg  MoveItCoords.msg
src/key_pub/: package.xml  setup.py
src/key_pub/key_pub/: dummy_key_publisher.py  key_publisher.py
src/key_pub/launch/: key_pub_launch.py
src/key_transform/: CMakeLists.txt  package.xml
src/key_transform/launch/: key_transform_launch.py
src/key_transform/src/: dynamic_key_transform.cpp  key_transform_listener.cpp  static_camera_to_map_transform.cpp
src/key_transform/srv/: GetKeyPositions.srv
src/moveit/: CMakeLists.txt  package.xml
src/moveit/launch/: moveit_launch.py
src/moveit/src/: moveit.cpp
src/ur_with_end_effector/ur_with_end_effector_description/: CMakeLists.txt  package.xml
src/ur_with_end_effector/ur_with_end_effector_description/launch/: display.launch.py
src/ur_with_end_effector/ur_with_end_effector_description/urdf/: ur_with_end_effector.xacro
