<?xml version="1.0"?>
<package format="3">
  <name>key_pos_msgs</name>
  <version>0.0.0</version>
  <description>Msgs for key positions</description>
  <maintainer email="z5309129@ad.unsw.edu.au">Finn Crawford</maintainer>
  <license>GPL-3</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
